<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login"
    tools:context=".Ui.UI.Register.RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="380dp"
        android:layout_height="460dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">


        <ImageView
            android:id="@+id/rec"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_baseline_recycling_24_login"/>

        <TextView
            android:id="@+id/txt_bSampah"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/bank_sampah"
            android:textColor="@color/login"
            android:textSize="16sp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="32dp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/txt_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="85dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="Masukkan Nama"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="Masukkan Email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="Masukkan Password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="Nomor Telephone"/>
        </LinearLayout>

        <Button
            android:id="@+id/createAcc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/create_account"
            android:textStyle="bold"
            android:background="@drawable/btn_shape"
            android:layout_gravity="center|bottom"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/already_account"/>

        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="45dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/sign_in"/>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>